tests/toylang/neg/000906_mutation.toylang
program a = { if = then sleep; } .
